--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,10 +1,11 @@
 @import "tailwindcss";
 
-html,
-body {
+html, body {
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  height: 100%;
+  overflow-x: hidden;   /* prevents sideways scroll */
+  overflow-y: auto;     /* allows vertical scroll */
 }
 
 main {
